Add advance features in MultiCamera app
-Full Screen view for each camera
-Settings screen for each camera
-Limited resolution settings to QVGA, VGA, HD, FHD, 4K
-Thumbnail for both video & picture capture for Quick Preview
-Recording duration countdown while recording video
-UI modifications
-New Activity to handle Camera Intents
-Duration & size info  in file details
-New Multicamera App Icon

Tracked-on: OAM-88628
Signed-off-by: Nikumbh, Mayur NimbaX <mayur.nimbax.nikumbh@intel.com>
Signed-off-by: Muhammad Aksar <muhammad.aksar@intel.com>

--- a/camera/MultiCameraApplication/AndroidManifest.xml
+++ b/camera/MultiCameraApplication/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-feature android:name="android.hardware.camera2.full"/>
-
+    <uses-feature android:name="android.hardware.usb.host" />
 
     <application
         android:allowBackup="true"
@@ -17,36 +17,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true">
+	android:theme="@style/AppTheme"
+	android:requestLegacyExternalStorage="true">
 
-        <activity
-                android:name=".PermissionsActivity"
-                android:label="@string/app_name"
-                android:excludeFromRecents="true"
-                android:parentActivityName=".MainActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                       android:value="com.intel.multicamera.MainActivity"/>
-        </activity>
-
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.intel.multicamera.MainActivity" />
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".CtsCameraIntentsActivity"
+                  android:excludeFromRecents="true"
+                  android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.media.action.IMAGE_CAPTURE" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -56,6 +32,27 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MultiViewActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+        <activity
+                android:name=".PermissionsActivity"
+                android:label="@string/app_name"
+               >
+
+        </activity>
+
+
     </application>
 
 </manifest>
