--- a/host/kernel/lts2019-yocto/x86_64_defconfig
+++ b/host/kernel/lts2019-yocto/x86_64_defconfig
@@ -6150,6 +6150,7 @@ CONFIG_DRM_I915=m
 CONFIG_DRM_I915_FORCE_PROBE=""
 CONFIG_DRM_I915_CAPTURE_ERROR=y
 CONFIG_DRM_I915_COMPRESS_ERROR=y
+CONFIG_DRM_I915_MEMTRACK=y
 CONFIG_DRM_I915_USERPTR=y
 CONFIG_DRM_I915_GVT=y
 CONFIG_DRM_I915_GVT_KVMGT=m
