Fix guest not getting started in SRIOV mode
vfio devices are not getting created resulting in qemu exiting in
SRIOV mode.

Fix the issue by changing vfio drivers to static modules and
regenerating the config for tag lts-v5.15.71-20221130-r1.

Tracked-On: OAM-105077
Signed-off-by: Jeevaka Prabu Badrappan <jeevaka.badrappan@intel.com>

--- a/host/kernel/linux-intel-lts2021/x86_64_defconfig
+++ b/host/kernel/linux-intel-lts2021/x86_64_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86_64 5.15.49 Kernel Configuration
+# Linux/x86_64 5.15.71 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Ubuntu 7.5.0-3ubuntu1~18.04) 7.5.0"
 CONFIG_CC_IS_GCC=y
@@ -335,7 +335,6 @@ CONFIG_X86_FEATURE_NAMES=y
 CONFIG_X86_X2APIC=y
 CONFIG_X86_MPPARSE=y
 # CONFIG_GOLDFISH is not set
-CONFIG_RETPOLINE=y
 CONFIG_X86_CPU_RESCTRL=y
 CONFIG_X86_EXTENDED_PLATFORM=y
 CONFIG_X86_NUMACHIP=y
@@ -510,6 +509,14 @@ CONFIG_HAVE_LIVEPATCH=y
 CONFIG_LIVEPATCH=y
 # end of Processor type and features
 
+CONFIG_CC_HAS_RETURN_THUNK=y
+CONFIG_SPECULATION_MITIGATIONS=y
+CONFIG_PAGE_TABLE_ISOLATION=y
+CONFIG_RETPOLINE=y
+CONFIG_RETHUNK=y
+CONFIG_CPU_UNRET_ENTRY=y
+CONFIG_CPU_IBPB_ENTRY=y
+CONFIG_CPU_IBRS_ENTRY=y
 CONFIG_ARCH_HAS_ADD_PAGES=y
 CONFIG_ARCH_MHP_MEMMAP_ON_MEMORY_ENABLE=y
 CONFIG_USE_PERCPU_NUMA_NODE_ID=y
@@ -611,6 +618,7 @@ CONFIG_XPOWER_PMIC_OPREGION=y
 CONFIG_BXT_WC_PMIC_OPREGION=y
 CONFIG_CHT_WC_PMIC_OPREGION=y
 CONFIG_CHT_DC_TI_PMIC_OPREGION=y
+CONFIG_ACPI_VIOT=y
 CONFIG_X86_PM_TIMER=y
 CONFIG_ACPI_PRMT=y
 
@@ -746,6 +754,7 @@ CONFIG_HAVE_KPROBES_ON_FTRACE=y
 CONFIG_HAVE_FUNCTION_ERROR_INJECTION=y
 CONFIG_HAVE_NMI=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
+CONFIG_TRACE_IRQFLAGS_NMI_SUPPORT=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
@@ -2725,6 +2734,7 @@ CONFIG_INTEL_MEI_ME=m
 CONFIG_INTEL_MEI_TXE=m
 # CONFIG_INTEL_MEI_GSC is not set
 CONFIG_INTEL_MEI_HDCP=m
+# CONFIG_INTEL_MEI_PXP is not set
 CONFIG_VMWARE_VMCI=m
 CONFIG_GENWQE=m
 CONFIG_GENWQE_PLATFORM_ERROR_RECOVERY=0
@@ -2737,6 +2747,7 @@ CONFIG_HABANA_AI=m
 CONFIG_UACCE=m
 # CONFIG_PVPANIC is not set
 CONFIG_GPIO_ASM_28XX=m
+# CONFIG_INTEL_GNA is not set
 # end of Misc devices
 
 #
@@ -4047,6 +4058,7 @@ CONFIG_VMXNET3=m
 CONFIG_FUJITSU_ES=m
 CONFIG_USB4_NET=m
 CONFIG_HYPERV_NET=m
+# CONFIG_NETWORK_PROXY is not set
 CONFIG_NETDEVSIM=m
 CONFIG_NET_FAILOVER=m
 CONFIG_ISDN=y
@@ -4766,6 +4778,8 @@ CONFIG_PTP_1588_CLOCK=y
 CONFIG_PTP_1588_CLOCK_OPTIONAL=y
 CONFIG_DP83640_PHY=m
 CONFIG_PTP_1588_CLOCK_INES=m
+# CONFIG_PTP_INTEL_TGPIO_PLAT is not set
+# CONFIG_PTP_INTEL_PMC_TGPIO is not set
 CONFIG_PTP_1588_CLOCK_KVM=m
 CONFIG_PTP_1588_CLOCK_IDT82P33=m
 CONFIG_PTP_1588_CLOCK_IDTCM=m
@@ -4830,6 +4844,7 @@ CONFIG_GPIO_MAX730X=m
 #
 CONFIG_GPIO_AMDPT=m
 CONFIG_GPIO_DWAPB=m
+# CONFIG_GPIO_EHL_PSE_PLAT is not set
 CONFIG_GPIO_EXAR=m
 CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_ICH=m
@@ -5478,6 +5493,7 @@ CONFIG_MFD_MP2629=m
 CONFIG_HTC_PASIC3=m
 CONFIG_HTC_I2CPLD=y
 CONFIG_MFD_INTEL_QUARK_I2C_GPIO=m
+# CONFIG_MFD_INTEL_EHL_PSE_GPIO is not set
 CONFIG_LPC_ICH=m
 CONFIG_LPC_SCH=m
 CONFIG_INTEL_SOC_PMIC=y
@@ -8450,23 +8466,23 @@ CONFIG_UIO_NETX=m
 CONFIG_UIO_PRUSS=m
 CONFIG_UIO_MF624=m
 CONFIG_UIO_HV_GENERIC=m
-# CONFIG_UIO_DFL is not set
-CONFIG_VFIO=m
-CONFIG_VFIO_IOMMU_TYPE1=m
-CONFIG_VFIO_VIRQFD=m
+CONFIG_UIO_DFL=m
+CONFIG_VFIO=y
+CONFIG_VFIO_IOMMU_TYPE1=y
+CONFIG_VFIO_VIRQFD=y
 CONFIG_VFIO_NOIOMMU=y
-CONFIG_VFIO_PCI_CORE=m
+CONFIG_VFIO_PCI_CORE=y
 CONFIG_VFIO_PCI_MMAP=y
 CONFIG_VFIO_PCI_INTX=y
-CONFIG_VFIO_PCI=m
+CONFIG_VFIO_PCI=y
 CONFIG_VFIO_PCI_VGA=y
 CONFIG_VFIO_PCI_IGD=y
 CONFIG_VFIO_MDEV=m
-CONFIG_IRQ_BYPASS_MANAGER=m
+CONFIG_IRQ_BYPASS_MANAGER=y
 CONFIG_VIRT_DRIVERS=y
 CONFIG_VBOXGUEST=m
 CONFIG_NITRO_ENCLAVES=m
-CONFIG_ACRN_HSM=y
+CONFIG_ACRN_HSM=m
 CONFIG_VIRTIO=y
 CONFIG_ARCH_HAS_RESTRICTED_VIRTIO_MEMORY_ACCESS=y
 CONFIG_VIRTIO_PCI_LIB=y
@@ -8874,6 +8890,7 @@ CONFIG_HUAWEI_WMI=m
 CONFIG_UV_SYSFS=m
 CONFIG_MXM_WMI=m
 CONFIG_PEAQ_WMI=m
+# CONFIG_NVIDIA_WMI_EC_BACKLIGHT is not set
 CONFIG_XIAOMI_WMI=m
 # CONFIG_GIGABYTE_WMI is not set
 CONFIG_ACERHDF=m
@@ -9067,7 +9084,7 @@ CONFIG_INTEL_IOMMU_FLOPPY_WA=y
 # CONFIG_INTEL_IOMMU_SCALABLE_MODE_DEFAULT_ON is not set
 CONFIG_IRQ_REMAP=y
 CONFIG_HYPERV_IOMMU=y
-# CONFIG_VIRTIO_IOMMU is not set
+CONFIG_VIRTIO_IOMMU=y
 
 #
 # Remoteproc drivers
@@ -10372,7 +10389,6 @@ CONFIG_KEY_NOTIFICATIONS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
-CONFIG_PAGE_TABLE_ISOLATION=y
 CONFIG_SECURITY_INFINIBAND=y
 CONFIG_SECURITY_NETWORK_XFRM=y
 CONFIG_SECURITY_PATH=y
@@ -10575,8 +10591,7 @@ CONFIG_CRYPTO_CRC32=m
 CONFIG_CRYPTO_CRC32_PCLMUL=m
 CONFIG_CRYPTO_XXHASH=m
 CONFIG_CRYPTO_BLAKE2B=m
-CONFIG_CRYPTO_BLAKE2S=m
-CONFIG_CRYPTO_BLAKE2S_X86=m
+CONFIG_CRYPTO_BLAKE2S_X86=y
 CONFIG_CRYPTO_CRCT10DIF=y
 CONFIG_CRYPTO_CRCT10DIF_PCLMUL=m
 CONFIG_CRYPTO_GHASH=y
@@ -11169,7 +11184,6 @@ CONFIG_STRICT_DEVMEM=y
 #
 # x86 Debugging
 #
-CONFIG_TRACE_IRQFLAGS_NMI_SUPPORT=y
 CONFIG_EARLY_PRINTK_USB=y
 # CONFIG_X86_VERBOSE_BOOTUP is not set
 CONFIG_EARLY_PRINTK=y
