--- a/docker/streamer/ubuntu22.04/Dockerfile
+++ b/docker/streamer/ubuntu22.04/Dockerfile
@@ -199,3 +199,6 @@ ENTRYPOINT ["/usr/bin/demo-bash"]
 
 USER user
 WORKDIR /home/user
+
+COPY entry/streamer-entry /
+ENTRYPOINT ["/streamer-entry"]
